--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,10 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install blender
 install:
-  - git clone -b E-120-automated-tests https://github.com/der-On/XPlane2Blender.git
-  - cd XPlane2Blender
   - mkdir tmp && cd tmp
   - wget http://mirror.cs.umn.edu/blender.org/release/Blender2.74/blender-2.74-linux-glibc211-x86_64.tar.bz2
   - tar jxf blender-2.74-linux-glibc211-x86_64.tar.bz2
   - mv blender-2.74-linux-glibc211-x86_64 blender
   - rm blender-2.74-linux-glibc211-x86_64.tar.bz2
-  - cd ../..
-script: cd XPlane2Blender/blender_25 && python tests.py ../tmp/blender/blender
+  - cd ..
+script: cd blender_25 && python tests.py ../tmp/blender/blender
