--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install blender
 install:
+  - BLENDER_VERSION="2.75"
+  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}a-linux-glibc211-x86_64"
   - mkdir tmp && cd tmp
-  - wget http://mirror.cs.umn.edu/blender.org/release/Blender2.75/blender-2.75-linux-glibc211-x86_64.tar.bz2
-  - tar jxf blender-2.75-linux-glibc211-x86_64.tar.bz2
-  - mv blender-2.75-linux-glibc211-x86_64 blender
-  - rm blender-2.75-linux-glibc211-x86_64.tar.bz2
+  - wget http://mirror.cs.umn.edu/blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.tar.bz2
+  - tar jxf ${BLENDER_ARCHIVE}.tar.bz2
+  - mv ${BLENDER_ARCHIVE} blender
+  - rm ${BLENDER_ARCHIVE}.tar.bz2
   - cd ..
-  - sudo ln -s ${PWD}/io_xplane2blender ${PWD}/tmp/blender/2.75/scripts/addons/io_xplane2blender
+  - sudo ln -s ${PWD}/io_xplane2blender ${PWD}/tmp/blender/${BLENDER_VERSION}/scripts/addons/io_xplane2blender
 script: python tests.py --blender ./tmp/blender/blender
