trying to use travis new containerized system

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: python
 python:
   - "2.7"
   - "3.4"
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install blender
+addons:
+  apt:
+    packages:
+      - blender
+sudo: false
 install:
   - BLENDER_VERSION="2.75"
   - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}a-linux-glibc211-x86_64"
@@ -14,5 +16,5 @@ install:
   - mv ${BLENDER_ARCHIVE} blender
   - rm ${BLENDER_ARCHIVE}.tar.bz2
   - cd ..
-  - sudo ln -s ${PWD}/io_xplane2blender ${PWD}/tmp/blender/${BLENDER_VERSION}/scripts/addons/io_xplane2blender
+  - ln -s ${PWD}/io_xplane2blender ${PWD}/tmp/blender/${BLENDER_VERSION}/scripts/addons/io_xplane2blender
 script: python tests.py --blender ./tmp/blender/blender
