--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ addons:
       - blender
 sudo: false
 install:
-  - BLENDER_VERSION="2.76b"
-  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}-linux-glibc211-x86_64"
+  - BLENDER_VERSION="2.76"
+  - BLENDER_VERSION_SUFFIX="b"
+  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}${BLENDER_VERSION_SUFFIX}-linux-glibc211-x86_64"
   - mkdir tmp && cd tmp
-  - wget http://mirror.cs.umn.edu/blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.tar.bz2
+  - wget http://ftp.nluug.nl/pub/graphics/blender/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.tar.bz2
   - tar jxf ${BLENDER_ARCHIVE}.tar.bz2
   - mv ${BLENDER_ARCHIVE} blender
   - rm ${BLENDER_ARCHIVE}.tar.bz2
