Adds  "Non-Exporting" light type, to be backwards compatible with 2.49 and as new feature so artists don't need to resort to tricks like putting their "work lights" on seperate layers and outside root objects

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,13 @@
+[mypy]
+
+[bpy]
+ignore_missing_imports = True
+
 [bpy.*]
+ignore_missing_imports = True
+
+[mathutils]
+ignore_missing_imports = True
+
+[mathutils.*]
 ignore_missing_imports = True
